--- a/_posts/2019-12-18-images.md
+++ b/_posts/2019-12-18-images.md
@@ -1,15 +1,15 @@
 ---
 layout: single
-title: 'THE LOOPS BROTHER'
+title: 'Images'
 tags: testing 
 ---
 
 <div>
-<h1> See ALL cat related images in chronological order </h1>
+<h1> Images </h1>
 {% for file in site.static_files %}
     {% if file.path contains 'photos' %}
         {% if file.extname contains '.jpg' %}
-            <div><a href="https://michaelscottkittenco.github.io/{{ file.path }}">{{ file.basename }}</a></div>
+            <div><img src="https://michaelscottkittenco.github.io/{{ file.path }}" /></div>
         {% endif %}
     {% endif %}
 {% endfor %}
